#1 테이블 셀 텍스트 overflow ellipsis 처리\n#2 테이블 컬럼 드래그 리사이즈 기능 추가 (프론트엔드)